@startuml
!theme plain

entity "Apartment" as Apartment {
  + ApartmentID: LONG <<PK>>
  --
  Building: String
  RoomNumber: String
  HeadResidentID: Long <<FK>>
  CreatedAt: LocalDateTime
  UpdatedAt: LocalDateTime
}

entity "Apartment_Motor" as ApartmentMotor {
  + ApartmentID: Long <<PK, FK>>
  + MotorNumbers: String <<PK>>
}

entity "Apartment_Car" as ApartmentCar {
  + ApartmentID: Long <<PK, FK>>
  + CarNumbers: String <<PK>>
}

entity "Resident" as Resident {
  + ResidentID: Long <<PK>>
  --
  OwnerResidentID: Long <<FK>>
  ApartmentID: Long <<FK>>
  FullName: String
  PhoneNumber: String
  Email: String
  IsHead: Boolean
  CreatedAt: LocalDateTime
  UpdatedAt: LocalDateTime
}

entity "FeeType" as FeeType {
  + FeeTypeID: Long <<PK>>
  --
  FeeTypeName: String
  --
  <<CHECK>> FeeTypeName IN ('Obligatory', 'Voluntary', 'Impromptu')
}

entity "FeeCategory" as FeeCategory {
  + FeeCategoryID: Long <<PK>>
  --
  FeeTypeID: Long <<FK>>
  FeeCategoryName: String
  FeeCategoryDescription: String
}

entity "Fee" as Fee {
  + FeeID: Long <<PK>>
  --
  FeeTypeID: Long <<FK>>
  FeeCategoryID: Long <<FK>>
  FeeName: String
  FeeDescription: String
  Amount: DECIMAL(12,2)
  ApplicableMonth: String
  StartDate: LocalDate
  EndDate: LocalDate
  Status: String
  CreatedAt: LocalDateTime
  UpdatedAt: LocalDateTime
  --
  <<CHECK>> Status IN ('Draft', 'Active', 'Closed', 'Archived')
}

entity "ApartmentFeeStatus" as ApartmentFeeStatus {
  + ApartmentID: Long <<PK, FK>>
  --
  AmountPaid: DECIMAL(12,2)
  Balance: DECIMAL(12,2)
  UpdatedAt: LocalDateTime
}

entity "Adjustment" as Adjustment {
  + AdjustmentID: Long <<PK>>
  --
  FeeID: Long <<FK>>
  AdjustmentAmount: DECIMAL(12,2)
  AdjustmentType: String
  Reason: String
  StartDate: LocalDate
  EndDate: LocalDate
  --
  <<CHECK>> AdjustmentType IN ('increase', 'decrease')
}

entity "AdjustmentBalance" as AdjustmentBalance {
  + AdjustmentBalanceID: Long <<PK>>
  --
  ApartmentID: Long
  FeeID: Long
  AdjustmentID: Long
  OldBalance: BigDecimal
  NewBalance: BigDecimal
  AdjustmentBalanceNote: String
}

entity "PayHistory" as PayHistory {
  + PayHistoryID: Long <<PK>>
  --
  ApartmentID: Long
  FeeID: Long
  PayDateTime: LocalDate
  PayAmount: BigDecimal
  PayNote: String
}

entity "Account" as Account {
  + AccountID: Long <<PK>>
  --
  Username: String
  Password: String
  Email: String
  IdentityNumber: String
  Role: String
  ResidentID: Long <<FK>>
  --
  <<CHECK>> Role IN ('Citizen', 'FeeCollector', 'Admin')
}

'--------------------------
' Relationships
'--------------------------

Apartment ||--o{ Resident : "has occupants >\nON DELETE SET NULL"
Resident }o--|| Apartment : "belongs to >"
Resident |o--o{ Resident : "owner-tenant >\nON DELETE SET NULL"
Resident ||--|| Apartment : "head resident >\nON DELETE SET NULL"

Apartment ||--o{ ApartmentMotor : "has motor numbers >\nON DELETE CASCADE"
Apartment ||--o{ ApartmentCar   : "has car numbers >\nON DELETE CASCADE"

FeeType ||--|{ Fee : "categorizes >\nON DELETE CASCADE"
FeeType ||--|{ FeeCategory : "groups >\nON DELETE CASCADE"
FeeCategory ||--|{ Fee : "sub-categorizes >\nON DELETE CASCADE"

Apartment ||--|| ApartmentFeeStatus : "has fee status >\nON DELETE CASCADE"
Fee ||--o{ ApartmentFeeStatus : "status for >\nON DELETE RESTRICT"
Fee ||--o{ Adjustment : "has adjustments >\nON DELETE CASCADE"

Account ||--|| Resident : "credentials for >"

@enduml
